# lireddit-clone-django-graphql

core/: 2.0  3.0.0b1  pyproject.toml  requirements.txt
core/core/: settings.py  urls.py
core/posts/: admin.py  models.py  schema.py
core/posts/migrations/: 0001_initial.py  0002_post_created_by.py  0003_alter_post_created_by.py  0004_alter_post_created_by.py
core/posts/mutations/: PostMutations.py  __init__.py  types.py
