[tool.poetry]
name = "lireddit-clone"
version = "0.1.0"
description = ""
authors = ["sugam <sugamkarki7058@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
Pillow = "^8.3.1"
graphene-django = "^2.15.0"
django-graphql-jwt = "^0.3.4"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
